--- a/package.json
+++ b/package.json
@@ -17,10 +17,7 @@
     "lucide-react": "^0.292.0",
     "@next/font": "14.0.0",
     "clsx": "^2.0.0",
-    "tailwind-merge": "^2.0.0",
-    "@privy-io/react-auth": "^2.21.3",
-    "@privy-io/server-auth": "^1.31.1",
-    "viem": "^2.33.3"
+    "tailwind-merge": "^2.0.0"
   },
   "devDependencies": {
     "typescript": "^5",
